# DE_zoomcamp_project_2026

./: .env  .gitignore  README.md  Setting_up_env.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
.dbt/: profiles.yml
dags/: us_housing_data_pipeline.py
housing_market_data/: dbt_project.yml
housing_market_data/models/marts/: dim_region.sql  dim_region_type.sql  dim_state.sql  fact_housing_data.sql
housing_market_data/models/marts/reporting/: aggregations_monthly.sql  aggregations_quarterly.sql  aggregations_weekly.sql  sale_price_weekly.sql  schema_reporting.yml
housing_market_data/models/staging/: bq_sources.yml  stg_us_housing_data.sql
housing_market_data/seeds/: us_states.csv
notebooks/: fetching_data.ipynb  fetching_data.py  gcs_to_pq.ipynb  gcs_to_pq.py
notebooks/.ipynb_checkpoints/: fetching_data-checkpoint.ipynb  gcs_to_pq-checkpoint.ipynb
notebooks/redfin_datasets/: state_market_tracker.csv
src/jobs/: fetching_data.py  gcs_to_bq.py
terraform/: main.tf  variables.tf
