[project]
name = "de-zoomcamp-2026-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
]
